clusters/cl01tl/manifests/rook-ceph/HTTPRoute-http-route-rook-ceph.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-rook-ceph
  namespace: rook-ceph
  labels:
    app.kubernetes.io/name: http-route-rook-ceph
    app.kubernetes.io/instance: rook-ceph
    app.kubernetes.io/part-of: rook-ceph
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - ceph.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: rook-ceph-mgr-dashboard
          port: 7000
          weight: 100
